# datawarehousing-tpch-dbgen

./: README.md  pyproject.toml  requirements_dev.txt  schedule-query.sql  setup.cfg  tox.ini
.github/workflows/: infrastructure-apply.yaml  infrastructure-destroy.yaml
iac/: main.tf  variables.tf
src/: Dockerfile  docker-compose.yml
src/dags/: benchmark_dataset.py  transform_dataset.py
tests/: test_dag_integrity.py
