[metadata]
name = datwarehousing_tpch_dbgen
description = datwarehousing tpch benchmark dataset
author = Waliu Adeniji
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    dags
install_requires =
    apache-airflow
    apache-airflow-providers-google
    pyarrow
    pyspark
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    black>=20.0
    click>=8.0
    flake8>=3.9
    pytest>=6.0
    tox>=3.24

[options.package_data]
dags = py.typed

[flake8]
max-line-length = 88
